# prx-voice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MODELS.md  README.md  SECURITY.md  config.yaml  docker-compose.yaml
crates/prx-voice-adapter/: Cargo.toml
crates/prx-voice-adapter/src/: agent.rs  asr.rs  azure_tts.rs  deepgram_asr.rs  factory.rs  fallback.rs  health.rs  lib.rs  mock_agent.rs  mock_asr.rs  mock_tts.rs  openai_agent.rs  tts.rs  vad.rs
crates/prx-voice-adapter/src/local/: engine.rs  local_asr.rs  local_tts.rs  mod.rs  ollama_agent.rs  sherpa_asr.rs  sherpa_tts.rs  sherpa_vad.rs
crates/prx-voice-audit/: Cargo.toml
crates/prx-voice-audit/src/: compliance.rs  lib.rs  record.rs  store.rs
crates/prx-voice-billing/: Cargo.toml
crates/prx-voice-billing/src/: ledger.rs  lib.rs  meter.rs  pricing.rs
crates/prx-voice-bin/: Cargo.toml
crates/prx-voice-bin/src/: main.rs
crates/prx-voice-control/: Cargo.toml
crates/prx-voice-control/src/: api.rs  auth.rs  connection.rs  grpc.rs  health_task.rs  jwt.rs  lib.rs  ratelimit.rs  state.rs
crates/prx-voice-core/: Cargo.toml
crates/prx-voice-core/src/: deploy.rs  flags.rs  lib.rs  security.rs  settings.rs
crates/prx-voice-event/: Cargo.toml
crates/prx-voice-event/src/: bus.rs  envelope.rs  lib.rs  payload.rs  replay.rs
crates/prx-voice-integration-tests/: Cargo.toml
crates/prx-voice-integration-tests/src/: lib.rs
crates/prx-voice-integration-tests/tests/: phase3_commercial.rs  phase4_enterprise.rs  phase5_production.rs  session_lifecycle.rs
crates/prx-voice-observe/: Cargo.toml
crates/prx-voice-observe/src/: degradation.rs  incident.rs  lib.rs  metrics.rs  slo.rs
crates/prx-voice-policy/: Cargo.toml
crates/prx-voice-policy/src/: lib.rs  quota.rs  rbac.rs  tenant.rs
crates/prx-voice-session/: Cargo.toml
crates/prx-voice-session/src/: budget.rs  config.rs  handoff.rs  lib.rs  manager.rs  orchestrator.rs  recording.rs
crates/prx-voice-state/: Cargo.toml
crates/prx-voice-state/src/: lib.rs  machine.rs  timer.rs  transition.rs
crates/prx-voice-storage/: Cargo.toml
crates/prx-voice-storage/src/: lib.rs  memory.rs  migrations.rs  models.rs  object.rs  pg.rs  traits.rs
crates/prx-voice-transport/: Cargo.toml
crates/prx-voice-transport/src/: channel.rs  lib.rs  mock.rs
crates/prx-voice-types/: Cargo.toml
crates/prx-voice-types/src/: error.rs  ids.rs  lib.rs  redact.rs
deploy/helm/: values-eu-west.yaml  values-us-east.yaml  values-us-west.yaml
deploy/helm/prx-voice/: Chart.yaml  values.yaml
deploy/helm/prx-voice/templates/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
models/: asr_server.py  download.sh  tts_server.py  tts_server_en.py  voice_clone_server.py
web-console/: index.html  package-lock.json  package.json  vite.config.ts
web-console/src/: main.tsx
web-console/src/api/: client.ts
web-console/src/components/: Layout.tsx
web-console/src/hooks/: useLocale.ts  useStore.ts
web-console/src/i18n/: en.ts  index.ts  zh.ts
web-console/src/pages/: AdminPage.tsx  AgentDebugPage.tsx  AudioDebugPage.tsx  EventTimelinePage.tsx  LoginPage.tsx  MetricsPage.tsx  ReplayPage.tsx  SessionTestPage.tsx  SessionsPage.tsx  TranscriptDebugPage.tsx  TtsDebugPage.tsx  VoiceClonePage.tsx
web-console/src/types/: api.ts
