[workspace]
resolver = "3"
members = [
    "crates/prx-voice-types",
    "crates/prx-voice-state",
    "crates/prx-voice-event",
    "crates/prx-voice-adapter",
    "crates/prx-voice-session",
    "crates/prx-voice-control",
    "crates/prx-voice-bin",
    "crates/prx-voice-policy",
    "crates/prx-voice-integration-tests",
    "crates/prx-voice-observe",
    "crates/prx-voice-audit",
    "crates/prx-voice-billing",
    "crates/prx-voice-transport",
    "crates/prx-voice-core",
    "crates/prx-voice-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Internal crates (added as we create them)
prx-voice-types = { path = "crates/prx-voice-types" }
prx-voice-state = { path = "crates/prx-voice-state" }
prx-voice-event = { path = "crates/prx-voice-event" }
prx-voice-adapter = { path = "crates/prx-voice-adapter" }
prx-voice-session = { path = "crates/prx-voice-session" }
prx-voice-control = { path = "crates/prx-voice-control" }
prx-voice-policy = { path = "crates/prx-voice-policy" }
prx-voice-observe = { path = "crates/prx-voice-observe" }
prx-voice-audit = { path = "crates/prx-voice-audit" }
prx-voice-billing = { path = "crates/prx-voice-billing" }
prx-voice-transport = { path = "crates/prx-voice-transport" }
prx-voice-core = { path = "crates/prx-voice-core" }
prx-voice-storage = { path = "crates/prx-voice-storage" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
async-trait = "0.1"
config = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
