[package]
name = "prx-voice-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prx-voice-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true, features = ["stream"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
sherpa-rs = { version = "0.6", optional = true }

[features]
default = []
sherpa = ["sherpa-rs"]

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
