[package]
name = "prx-voice-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prx-voice-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
