[package]
name = "prx-voice-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prx-voice-types = { workspace = true }
prx-voice-state = { workspace = true }
prx-voice-event = { workspace = true }
prx-voice-adapter = { workspace = true }
prx-voice-observe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[features]
default = []
sherpa = ["prx-voice-adapter/sherpa"]

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
