[package]
name = "prx-voice-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prx-voice-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
