[package]
name = "prx-voice-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
prx-voice-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
